vdsm/static/app.css
.ovirt-content-header-extra {
    background: #f5f5f5;
    border-bottom: 1px solid #ddd;
    padding: 10px 20px;
    width: 100%;
    position: fixed;
    z-index: 900;
    top: 0;
}

.ovirt-content-header-extra .btn-group:not(:first-child) {
    padding-left: 20px;
}

.curtains-ct {
    height: 100%;
    width: 100%;
    position: fixed;
}

.watermark {
    opacity: 0.25;
    font-size: 1.5em;
    text-align: center;
}

